--- a/project-03-base-lazy-days/client/package.json
+++ b/project-03-base-lazy-days/client/package.json
@@ -28,6 +28,7 @@
     "@tanstack/eslint-plugin-query": "^5.58.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
